# nanobind_metal_example

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
src/: metal_add.cpp  metal_add.h  metal_impl.cpp  metal_utils.cpp  metal_utils.h  nanobind_gpu_example_ext.cpp  nanobind_metal_example_ext.cpp
src/cuda/: add.cpp  add.h  nb_utils.h
src/cuda/kernels/: add.cu  add.h  free.cu  free.h  utils.h
src/metal/: add.cpp  metal_impl.h  nb_utils.h  utils.cpp  utils.h
src/metal/kernels/: add.metal
src/nanobind_gpu_example/: __init__.py
src/nanobind_metal_example/: __init__.py
tests/: test_basic.py
